--- a/_config.yml
+++ b/_config.yml
@@ -211,6 +211,9 @@ gems:
   - jekyll/scholar
   - jekyll-twitter-plugin
 
+plugins_dir:
+  - jekyll-twitter-plugin
+
 whitelist:
   - jekyll-redirect-from
 
