--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 ## TO RUN: `bundle exec jekyll serve`
 # --- General options --- #
 
-baseurl: /
+baseurl: "https://evanodell.com/"
 title: Evan Odell
 description: Various Things
 
