--- a/config.toml
+++ b/config.toml
@@ -15,8 +15,12 @@ google_analytics = "UA-90706059-1"
   rss = false
   comments = true
   readingTime = false
-#  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
-
+  useHLJS = true
+  highlightjsVersion = "9.11.0"
+  highlightjsCDN = "//cdn.bootcss.com"
+  highlightjsLang = ["r", "yaml"]
+  highlightjsTheme = "far"
+  UseChroma = false
 
 
 [permalinks]
@@ -40,9 +44,9 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 
 
 # Set to true to disable code folding
-disable_codefolding = false
+#disable_codefolding = false
 # Set to "hide" or "show" all codes by default
-codefolding_show = "hide"
+#codefolding_show = "hide"
 
 
 fractions = false
