--- a/config.toml
+++ b/config.toml
@@ -74,7 +74,7 @@ fractions = false
     
 [[menu.main]]
     name = "CV"
-    url = "/cv.pdf"
+    url = "/EvanOdell-cv.pdf"
     weight = 3
     
     
