--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ fractions = false
 [author]
   name = "Evan Odell"
   website = "https://evanodell.com"
-  email = "evanodell91@gmail.com"
+  email = "evan@evanodell.com"
   github = "evanodell"
   #gitlab = "username"
   twitter = "evanodell"
