--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,9 @@
   to = "/evanodell-cv.pdf"
   status = 301
   force = false
+
+[context.production.environment]
+  HUGO_VERSION = "0.65.3"
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.65.3"
