--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,11 @@
   to = "https://evanodell.github.io/cv"
   status = 301
   force = false
+[[redirects]]
+  from = "/cv/evanodell_cv.pdf"
+  to = "https://evanodell.github.io/cv/evanodell_cv.pdf"
+  status = 301
+  force = false
 
 [context.production.environment]
   HUGO_VERSION = "0.65.3"
